--- a/Booking.Application/Resources/ErrorMessage.resx
+++ b/Booking.Application/Resources/ErrorMessage.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EmailIsNotCorrect" xml:space="preserve">
+    <value>Email is not correct</value>
+  </data>
   <data name="HotelNotFound" xml:space="preserve">
     <value>Hotel not found</value>
   </data>
@@ -159,7 +162,7 @@
   <data name="UserNotFound" xml:space="preserve">
     <value>User not found</value>
   </data>
-  <data name="UserWasn'tCreated" xml:space="preserve">
+  <data name="UserWasntCreated" xml:space="preserve">
     <value>User wasn't created</value>
   </data>
 </root>
